@startuml 05_sprint1_class_diagram

skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2E74B5
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #F39C12
skinparam linetype ortho

enum UserRole {
  admin
  technician
  client
}

enum ClientType {
  SOCIETE
  PERSONNE_PHYSIQUE
}

enum EquipmentType {
  CLIMATISEUR
  SYSTEME_SURPRESSION
}

enum ContractStatut {
  ACTIF
  BIENTOT_EXPIRE
  EXPIRE
}

enum Periodicite {
  MENSUELLE
  TRIMESTRIELLE
  SEMESTRIELLE
  ANNUELLE
}

class User {
  + id : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + password : String
  + role : UserRole
  + actif : Boolean
  + dateCreation : Date
  --
  + desactiver() : void
  + restaurer() : void
}

class Client {
  + id : String
  + typeClient : ClientType
  + societe : String
  + contact : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + password : String
  + adresse : String
  + ville : String
  + dateCreation : Date
}

class Equipment {
  + id : String
  + reference : String
  + type : EquipmentType
  + marque : String
  + modele : String
  + numeroSerie : String
  + description : String
}

class EquipmentImage {
  + id : String
  + filename : String
  + previewUrl : String
  + isMain : Boolean
}

class ClientEquipement {
  + id : String
  + clientId : String
  + equipementId : String
  + dateAchat : Date
  + dateInstallation : Date
  + localisation : String
  + notes : String
}

class Contract {
  + id : String
  + reference : String
  + clientId : String
  + dateDebut : Date
  + dateFin : Date
  + periodicite : Periodicite
  + statut : ContractStatut
  + clientEquipementIds : String[]
  --
  + calculerStatut() : ContractStatut
}

class PreventiveInterventionPreview {
  + id : String
  + datePrevue : Date
  + clientEquipementId : String
  + equipementId : String
  + clientId : String
  + description : String
}

note right of PreventiveInterventionPreview
  Objet éphémère utilisé pour la
  prévisualisation du planning avant
  la validation du contrat.
  Généré automatiquement par le Système.
end note

Client      "1"   *-- "*"   ClientEquipement  : possède >
Equipment   "1"   *-- "*"   ClientEquipement  : affecté via >
Equipment   "1"   *-- "*"   EquipmentImage    : possède >
Client      "1"   --  "*"   Contract          : souscrit >
Contract    "*"   --  "*"   ClientEquipement  : couvre
Contract    "1"   ..> "*"   PreventiveInterventionPreview : génère (Système)

User      .. UserRole
Client    .. ClientType
Equipment .. EquipmentType
Contract  .. ContractStatut
Contract  .. Periodicite

note top of Contract
  Le contrat couvre des installations
  ClientEquipement, pas des équipements
  du catalogue directement.
end note
@enduml
